# Gauss

./: .gitignore  CTO_INSTRUCTIONS.md  README.md  disway.html  get_ddg_details.py  main.py  pyproject.toml  start_cto_loop.sh  watchdog.sh
cobot/: all_mids.json  asset_ctxs.json  binance_executor.py  bot.js  diff_watchlist.js  hyperliquid_executor.py  hyperliquid_meta.js  hyperliquid_mids.js  leaderboard.js  leaderboard.json  package-lock.json  package.json  paper_signals.json  prune_watchlist.js  realtime_watcher.js  refresh_seed.js  scores.json  trade_journal.backup.json  trade_journal.json  watchlist.diff.json  watchlist.prev.json  watchlist.pruned.json
gauss/: api.py  config.py  main.py  tools.py
kalai/: .kalai_mon.js  ai_monitor.js  backfill_market.js  backtest.js  backtest_live.js  backtest_tick.js  backtest_v2.js  backtest_v3.js  breakout_test.js  cert.pem  cf_kalai.yml  cf_token.txt  cf_token2.txt  config.json  config.v2.json  dashboard.js  db.js  ecosystem.config.js  eval_trades.js  filter_study.js  index.js  kalai_positions.json  key.pem  learning_log.json  monitor_cron.py  opt.js  package-lock.json  package.json  regime_research.js  research_study.js  research_study2.js  research_study3.js  research_study4.js  scalper.js  seed_fred.js  state.json  strategy.js  sweep.js  sweep2.js  sweep3.js  (+16 more)
kalai/kline_cache/: BTCUSDT.json  ETHUSDT.json  SOLUSDT.json
kalai/reports/: eval_1783709264461.md  eval_1783767565702.md  last_eval.json  (+1 more)
tabot/: package-lock.json  package.json
trenchess/: alerts.json
web/: Caddyfile  package-lock.json  package.json  server.js
(+51 files in other folders)
